hphp/hack/test/typecheck/coeffects/conformance/invalid_aliased_type.php.exp
File "invalid_aliased_type.php", line 5, characters 23-31:
Illegal context: `int`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
